Added activeMQStore.java class, deleted SapID (Product Attr).
Next step, add a class to generate some simulated data to make tests and to test if activeMQ is sending menssages.